--- a/client/microblog.html
+++ b/client/microblog.html
@@ -3,26 +3,45 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">microblog</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        {{> loginButtons }} <!-- here -->
+      </ul>
+    </div><!-- /.container-fluid -->
+  </nav>
   <div class="container">
     <div class="row">
       <div class="span12">
         <h1>
           microblog - tutorial de meteor
         </h1>
-        {{> loginButtons}}
         <form class="new-post">
           <input type="text" class="form-control" name="text" placeholder="Compartilhe alguma novidade" />
         </form>
       </div>
       <div class="span12">
-        {{#each posts}}
-        {{> post}}
-        {{/each}}
+        <h2>Posts mais recentes</h2>
       </div>
+      {{#each posts}}
+      {{> post}}
+      {{/each}}
     </div>
   </div>
 </body>
 
 <template name="post">
-<p><strong>{{ username }}</strong> - {{text}}</p>
+  <div class="span12 post">
+    <strong>{{ username }}</strong> - {{text}}
+    <br />
+    <em>Em {{ createdAt }}</em>
+    {{#if isOwner}}
+    <br />
+    <a class="btn btn-danger btn-xs btn-delete" data-id="{{ post.id }}">Apagar post</a>
+    {{/if}}
+  </div>
 </template>
