--- a/client/microblog.html
+++ b/client/microblog.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -38,7 +38,7 @@
   <div class="span12 post">
     <strong>{{ username }}</strong> - {{text}}
     <br />
-    <em>Em {{ createdAt }}</em>
+    <em>Postado em {{ pretiffyDate createdAt }}</em>
     {{#if isOwner}}
     <br />
     <a class="btn btn-danger btn-xs btn-delete" data-id="{{ post.id }}">Apagar post</a>
